--- a/css/main.css
+++ b/css/main.css
@@ -3,9 +3,14 @@ body{
 }
 .controlContainer{
     display: inline-block;
-    width: 280px;
+    width: calc(33% - 112px);
     height: 102px;
     clear: right;
+    vertical-align: top;
+}
+.controlContainer.capAtStandardRepayment{
+  width: 318px;
+  margin-top: 16px;
 }
 #repaymentChart, #yearsChart{
 	float: left;
@@ -219,14 +224,16 @@ p{
     position: absolute;
 }
 #clickToExpand{
-    position: absolute;
-    bottom: 0px;
-    z-index: 100;
-    background: #1696d2;
-    padding: 20px;
-    color: white;
-    left: calc(50% - 150px);
-    cursor: pointer;
+  position: absolute;
+  bottom: 10px;
+  z-index: 100;
+  color: #1696d2;
+  left: calc(50% - 110px);
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: bold;
+  width: 320px;
+  text-align: center;
 }
 
 
@@ -269,24 +276,41 @@ p{
 /********************************************************/
 
 #controls{
-	width: 880px;
+	width: 1000px;
 	margin: 0 auto;
 }
-#controlsLeft, #controlsRight, #buttons{
-	width: 280px;
-	float: left;
+#controlTitle{
+  width: 100%;
+  text-align: center;
+  margin-bottom: 35px;
+  font-weight: bold;
+  font-size: 14px;
 }
-.button{
-	width: 187px;
-    background: #1696d2;
-    margin-bottom: 10px;
-    padding: 8px;
-    color: white;
-    text-align: center;
-    cursor: pointer;
+#buttons{
+  width: 100%;
+  margin-bottom: 70px;
 }
-.button:hover, .button.clicked{
-	background: #353535;
+#buttons .button{
+  display: inline-block;
+  padding: 12px;
+  background: #d2d2d2;
+  color: #696969;
+  font-size: 14px;
+  margin-left: 15px;
+  cursor: pointer;
+  vertical-align: top;
+}
+#buttonLabel{
+  color: #848081;
+  font-style: italic;
+  font-size: 14px;
+  width: 180px;
+  line-height: 19px;
+  display: inline-block;
+}
+#buttons .button:hover,#buttons .button.clicked{
+	background: #1696d2;
+  color: #fff;
 }
 .chartTitle{
 	font-size: 18px;
@@ -336,37 +360,53 @@ p{
 }
 
 .controlContainer .valLabel{
-	text-align: right;
-    border: 2px solid #5c5859;
-    background: #ffffff;
-    width: 72px;
-    font-size: 14px;
-    font-weight: bold;
-    padding-right: 16px;
-	margin-top: 6px;
-    margin-left: 9px;
+  text-align: right;
+  border: none;
+  border-bottom: 2px solid #d2d2d2;
+  background: #ffffff;
+  color: #1696d2;
+  width: 72px;
+  font-size: 14px;
+  font-weight: bold;
+  padding-right: 16px;
+  margin-top: 6px;
+  margin-left: 9px;
+}
+
+.controlContainer.percentDiscretionaryAGI .valLabel{
+  width: 51px;
+  padding-right: 16px;
+}
+.controlContainer.minPayment .valLabel{
+  width: 47px;
+  padding-right: 0px;
+}
+.controlContainer.forgivenessPeriod .valLabel{
+  padding-right: 42px;
 }
 .controlContainer .valLabel.disabled{
-	border: 2px solid #d2d2d2;
+  border: none;
+	border-bottom: 2px solid #d2d2d2;
 	color: #d2d2d2;
 }
 .controlContainer.percentDiscretionaryAGI .suffix{
     font-weight: bold;
     font-size: 14px;
     margin-left: -15px;
+    color: #1696d2;
 }
-.controlContainer.forgivenessPeriod .valLabel{
-	padding-right: 42px;
-}
+
 .controlContainer.forgivenessPeriod .suffix{
 	margin-left: -39px;
     font-size: 14px;
     font-weight: bold;
+    color: #1696d2;
 }
 .suffix.disabled{
-	color: #d2d2d2;
+	color: #d2d2d2 !important;
 }
 .controlContainer.minPayment .prefix{
+  color: #1696d2;
 	position: relative;
 	left: 21px;
 	font-size: 14px;
@@ -394,10 +434,10 @@ p{
 }
 #capLabel{
     font-size: 14px;
-    font-weight: bold;
+    font-weight: normal;
     display: inline-block;
-    width: 190px;
-    top: 7px;
+    width: 280px;
+    top: -2px;
     position: relative;
 }
 
