--- a/css/main.css
+++ b/css/main.css
@@ -268,6 +268,11 @@ p{
 	font-size: 14px;
     font-weight: bold;
 }
+.axisLabel{
+  font-size: 12px;
+  font-style: italic;
+  font-family: Lato;
+}
 
 
 /********************************************************/
