--- a/css/main.css
+++ b/css/main.css
@@ -4,12 +4,13 @@ body{
 .controlContainer{
     display: inline-block;
     width: calc(33% - 112px);
-    height: 102px;
+    height: 132px;
     clear: right;
     vertical-align: top;
 }
 .controlContainer.capAtStandardRepayment{
-  width: 318px;
+    width: 308px;
+    margin-left: 10px;
 }
 #repaymentChart, #yearsChart{
 	float: left;
@@ -273,7 +274,12 @@ p{
   font-style: italic;
   font-family: Lato;
 }
-
+#notes{
+  font-size: 11px;
+  display: inline-block;
+  width: 810px;
+  padding-left: 40px;
+}
 
 /********************************************************/
 /******************* CONTROLS ***************************/
@@ -293,7 +299,7 @@ p{
 }
 #buttons{
   width: 100%;
-  margin-bottom: 70px;
+  margin-bottom: 50px;
 }
 #buttons .button{
   display: inline-block;
@@ -367,7 +373,6 @@ p{
     display: inline-block;
     cursor: pointer;
     margin-right: 5px;
-    margin-top: 20px;
     margin-bottom: 50px;
     float: right;
     margin-bottom: 120px;
@@ -399,7 +404,7 @@ p{
   padding-right: 16px;
 }
 .controlContainer.minPayment .valLabel{
-  width: 47px;
+  width: 24px;
   margin-top: 17px;
   padding-right: 0px;
 }
@@ -409,6 +414,7 @@ p{
 .controlContainer.forgivenessPeriod .valLabel{
   padding-right: 42px;
   margin-top: 17px;
+  width: 61px;
 }
 .controlContainer .valLabel.disabled{
   border: none;
@@ -481,112 +487,51 @@ input[type=number]::-webkit-outer-spin-button {
 
 
 
-/* Base for label styling */
-[type="checkbox"]:not(:checked),
-[type="checkbox"]:checked {
-  position: absolute;
-  left: -9999px;
-}
-[type="checkbox"]:not(:checked) + label,
-[type="checkbox"]:checked + label {
-  position: relative;
-  padding-left: 1.95em;
-  cursor: pointer;
-  left: 30px;
-  top: 30px;
+
+/***************************************************************************/
+/****************************** YES/NO SWITCH ******************************/
+/***************************************************************************/
+
+#capAtStandardRepayment{
+  margin-top: 10px;
 }
 
-/* checkbox aspect */
-[type="checkbox"]:not(:checked) + label:before,
-[type="checkbox"]:checked + label:before {
-  content: '';
-  position: absolute;
-  left: 0; top: 0;
-  width: 1.25em; height: 1.25em;
-  border: 2px solid #9d9d9d;
-  background: #fff;
-  border-radius: 100%;
-  box-shadow: inset 0 1px 3px rgba(0,0,0,.1);
-}
-/* checked mark aspect */
-[type="checkbox"]:not(:checked) + label:after,
-[type="checkbox"]:checked + label:after {
-    content: '';
-    width: 12px;
-    height: 12px;
-    background: #1696d2;
-    position: absolute;
-    top: 4px;
-    left: 4px;
-    border-radius: 100%;
-    -webkit-transition: all 0.2s ease;
-    transition: all 0.2s ease;
-}
-/* checked mark aspect changes */
-[type="checkbox"]:not(:checked) + label:after {
-  opacity: 0;
-  transform: scale(0);
-}
-[type="checkbox"]:checked + label:after {
-  opacity: 1;
-  transform: scale(1);
-}
+.switch {
+    background-image: url(../images/yes-no.png);
+    background-color: #696969;
+    background-repeat: no-repeat;
+    width: 63px;
+    height: 26px;
+    border-radius: 20px;
 
-
-/*
-
-
-
-[type="checkbox"]:checked,
-[type="checkbox"]:not(:checked) {
-    position: absolute;
-    left: -9999px;
-}
-[type="checkbox"]:checked + label,
-[type="checkbox"]:not(:checked) + label
-{
-    position: relative;
-    padding-left: 28px;
+    /*display: inline-block;*/
+    background-size: cover;
     cursor: pointer;
-    line-height: 20px;
-    display: inline-block;
-    color: #666;
+    /*margin-right: 9px;*/
+    /*top: 4px;*/
+    /*left: 4px;*/
+    /*position: relative;*/
+
+    -webkit-transition:background-position .1s ease-in;  
+    -moz-transition:background-position .1s ease-in;  
+    -o-transition:background-position .1s ease-in;  
+    transition:background-position .1s ease-in; 
 }
-[type="checkbox"]:checked + label:before,
-[type="checkbox"]:not(:checked) + label:before {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 18px;
-    height: 18px;
-    border: 1px solid #ddd;
-    border-radius: 100%;
-    background: #fff;
+.switch.off {
+    background-position: 2px 0px;
+    background-color: #696969;
 }
-[type="checkbox"]:checked + label:after,
-[type="checkbox"]:not(:checked) + label:after {
-    content: '';
-    width: 12px;
-    height: 12px;
-    background: #F87DA9;
-    position: absolute;
-    top: 4px;
-    left: 4px;
-    border-radius: 100%;
-    -webkit-transition: all 0.2s ease;
-    transition: all 0.2s ease;
+
+.switch.on {
+    background-position: -35px 0px;
+    background-color: #1696d2;
 }
-[type="checkbox"]:not(:checked) + label:after {
-    opacity: 0;
-    -webkit-transform: scale(0);
-    transform: scale(0);
+.switch.off:hover{ 
+  background-color: #333 !important;
 }
-[type="checkbox"]:checked + label:after {
-    opacity: 1;
-    -webkit-transform: scale(1);
-    transform: scale(1);
-}*/
+.switch.on:hover{ 
+  background-color: #12719e !important;
+}
 
 /***************************************************************************/
 /************************ CROSS BROWSER RANGE INPUT ************************/
@@ -862,3 +807,66 @@ input.triangle[type=range]:focus::-ms-fill-lower {
 input.triangle[type=range]:focus::-ms-fill-upper {
     background: #353535;
 }
+
+
+
+
+/***************************************************************************/
+/******************** MOBILE *******************/
+/***************************************************************************/
+@media(max-width: 1200px){
+  #controls{
+    width: 768px;
+  }
+  #buttonLabel{
+    display: block;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+  .controlContainer{
+    width: calc(33% - 95px)
+  }
+  #repayeUndergrad{
+    margin-left: 53px !important;
+  }
+  .controlContainer.capAtStandardRepayment, #capLabel{
+    width: 220px;
+  }
+  .controlContainer .valLabel{
+    display: inline-block;
+    padding-top: 15px !important;
+    margin-left: 0px !important;
+    margin-top: 0px !important;
+  }
+  .prefix{
+    display: block;
+    float: left;
+    clear: left;
+    position: initial;
+    margin-top: 17px;
+    z-index: 1;
+    left: 7px !important;
+  }
+  .controlContainer.minPayment .valLabel {
+      position: relative;
+      z-index: 0;
+  }
+  #minPayment{
+    margin-top: 0px;
+    z-index: 1;
+  }
+  #repaymentChart, #yearsChart{
+     padding: 0px;
+    margin: 0 auto;
+    float: none;
+    display: block;
+    width: 450px;
+    margin-top: 32px;
+
+  }
+  #notes{
+    width: 370px;
+  }
+}
+
