--- a/css/main.css
+++ b/css/main.css
@@ -513,6 +513,11 @@ input[type=number]::-webkit-outer-spin-button {
     margin: 0 !important; 
 }
 
+.vallabel {
+  -webkit-appearance: textfield;
+  -moz-appearance: textfield;
+}
+
 
 
 
