--- a/css/main.css
+++ b/css/main.css
@@ -646,18 +646,18 @@ input[type=range]:-moz-focusring{
 
 input[type=range]::-ms-track {
     /*width: 300px;*/
-    max-width: 150px;
-    height: 5px;
+    max-width: 50px;
+    /*height: 5px;*/
     
     /*remove bg colour from the track, we'll use ms-fill-lower and ms-fill-upper instead */
-    background: pink;
+    background: transparent;
     
     /*leave room for the larger thumb to overflow with a transparent border */
-    border-color: pink;
+    border-color: transparent;
     border-width: 6px 0;
 
     /*remove default tick marks*/
-    color: green;
+    color: transparent;
 }
 input[type=range]::-ms-fill-lower {
     background: #9d9d9d;
