--- a/css/main.css
+++ b/css/main.css
@@ -559,6 +559,29 @@ input[type=range] {
     /*required for proper track sizing in FF*/
     /*width: 300px;*/
 }
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+input[type=range] {
+  float: none;
+  width: 110px;
+  clear: both;
+  position: relative;
+  top: 6px;
+    /*removes default webkit styles*/
+    -webkit-appearance: none;
+    
+    /*fix for FF unable to apply focus style bug */
+    border: none;
+    height: none;
+    background-color: transparent;
+    
+    /*required for proper track sizing in FF*/
+    /*width: 300px;*/
+}
+
+
+}
+
 input[type=range]::-webkit-slider-runnable-track {
     /*width: 300px;*/
     height: 5px;
