--- a/css/main.css
+++ b/css/main.css
@@ -13,8 +13,14 @@ body{
     margin-left: 10px;
 }
 .controlContainer.excludeIncome{
-    width: 150px;
+    width: 250px;
     margin-left: 22px;
+}
+#excludeIncome{
+      display: inline-block;
+    margin-left: 10px;
+    top: -9px;
+    position: relative;
 }
 
 #repaymentChart, #yearsChart{
@@ -246,6 +252,13 @@ p{
   color: #1696d2;
   cursor: pointer;
 }
+
+.controlRow{
+  border-bottom: 1.5px solid #D2D2D2;
+padding-top: 50px;
+    padding-bottom: 20px;
+}
+}
 /********************************************************/
 /*********************** CHARTS *************************/
 /********************************************************/
@@ -258,9 +271,13 @@ p{
 }
 .repaymentLine.input, .yearsLine{
 	stroke: #1696d2;
+  stroke-width: 2px;
+  fill: none;
 }
 .repaymentLine.fixed{
 	stroke: #fdbf11;
+  stroke-width: 2px;
+  fill: none;
 }
 
 .axis--y .tick line{
@@ -323,7 +340,7 @@ p{
 .controlHeader{
   font-size: 18px;
   font-weight: bold;
-  margin-bottom: 7px;
+  margin-bottom: 25px;
 }
 #controls{
 	width: 1000px;
@@ -339,7 +356,9 @@ p{
 }
 #buttons{
   width: 100%;
-  margin-bottom: 80px;
+  /*margin-bottom: 80px;*/
+  border-bottom: 1.5px solid #D2D2D2;
+  padding-bottom: 100px;
 }
 #buttons .button{
   display: inline-block;
@@ -444,15 +463,15 @@ p{
 }
 .controlContainer.minPayment .valLabel{
   width: 24px;
-  margin-top: 22px;
+  /*margin-top: 22px;*/
   padding-right: 0px;
 }
 #minPayment, #forgivenessPeriod{
-  margin-top: 17px;
+  /*margin-top: 17px;*/
 }
 .controlContainer.forgivenessPeriod .valLabel{
   padding-right: 42px;
-  margin-top: 22px;
+  /*margin-top: 22px;*/
   width: 61px;
 }
 .controlContainer .valLabel.disabled{
@@ -460,11 +479,28 @@ p{
 	border-bottom: 2px solid #d2d2d2;
 	color: #d2d2d2;
 }
-.controlContainer.percentDiscretionaryAGI .suffix{
+
+.controlContainer.percentDiscretionaryAGI .suffix, .controlContainer.percentLoan .suffix{
     font-weight: bold;
     font-size: 14px;
     margin-left: -15px;
     color: #1696d2;
+}
+.controlContainer.percentLoan .valLabel{
+  width: 36px;
+}
+
+.controlContainer.percentFPL input[type=number]{
+  width: 45px;
+}
+.controlContainer.percentFPL .suffix,.controlContainer.fplIncome .suffix , .controlContainer.fplReduction .suffix{
+    font-weight: bold;
+    font-size: 14px;
+    margin-left: -15px;
+    color: #1696d2;
+}
+.controlContainer.fplReduction input[type=number]{
+  width: 26px;
 }
 
 .controlContainer.forgivenessPeriod .suffix{
@@ -476,7 +512,7 @@ p{
 .suffix.disabled{
 	color: #d2d2d2 !important;
 }
-.controlContainer.minPayment .prefix{
+.controlContainer.minPayment .prefix, .controlContainer.fplIncome .prefix{
   color: #1696d2;
 	position: relative;
 	left: 21px;
@@ -485,11 +521,18 @@ p{
 	margin-left: -8px;
   left: 16px;
 }
-.controlContainer.minPayment .valLabel{
+.prefix.disabled{
+  color: #d2d2d2 !important;
+}
+.controlContainer.minPayment .valLabel, .controlContainer.fplIncome .valLabel{
 	text-align: left;
 	padding-left: 9px;
   -webkit-appearance: textfield;
   -moz-appearance: textfield;
+}
+.controlContainer.fplIncome .valLabel{
+  padding-right: 0px;
+  width: 53px;
 }
 .controlContainer .label{
 	font-weight: bold;
@@ -513,6 +556,22 @@ p{
     width: 140px;
     top: -2px;
     position: relative;
+    display: inline-block;
+    width: 120px;
+    text-align: right;
+}
+#capLabel2{
+    font-size: 14px;
+    font-weight: bold;
+    display: inline-block;
+    width: 125px;
+    top: -2px;
+    position: relative;
+    display: inline-block;
+    text-align: right;
+}
+.controlContainer.capAtStandardRepayment, .controlContainer.capAtPercentPayment{
+  width: 232px;
 }
 
 
@@ -529,7 +588,33 @@ input[type=number]::-webkit-outer-spin-button {
   -moz-appearance: textfield;
 }
 
+.bottomLable{
+      color: #696969;
+    font-size: 14px;
+    font-style: italic;
+    margin-left: 2px;
+    margin-top: 8px;
 
+}
+.controlContainer.fplIncome{
+  margin-left: -56px;
+}
+.bracket{
+    display: inline-block;
+    position: relative;
+    left: -46px;
+    top: -29px;
+}
+.bracket.payments{
+    left: -24px;
+    top: -22px;
+}
+.bracket img{
+  height: 100px;
+}
+.bracketMobile{
+  display: none;
+}
 
 
 
@@ -538,8 +623,11 @@ input[type=number]::-webkit-outer-spin-button {
 /****************************** YES/NO SWITCH ******************************/
 /***************************************************************************/
 
-#capAtStandardRepayment{
-  margin-top: 10px;
+#capAtStandardRepayment, #capAtPercentPayment{
+    display: inline-block;
+    top: -20px;
+    left: 9px;
+    position: relative;
 }
 
 .switch {
@@ -1000,6 +1088,8 @@ input.triangle[type=range]:focus::-ms-fill-upper {
     float: left;
   }
 }
+
+
 
 /***************************************************************************/
 /******************** PHONE *******************/
